[package]
name = "threadpool-test"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@fullstory.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.4", features = ["thread-pool"] }
futures-timer = "3.0.1"
